--- a/.env
+++ b/.env
@@ -26,3 +26,10 @@ APP_SECRET=cf6409bed7c937777184a5866bd4e368
 # Configure your db driver and server_version in config/packages/doctrine.yaml
 DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/swiftmailer-bundle ###
+# For Gmail as a transport, use: "gmail://username:password@localhost"
+# For a generic SMTP server, use: "smtp://localhost:25?encryption=&auth_mode="
+# Delivery is disabled by default via "null://localhost"
+MAILER_URL=smtp://localhost:25?encryption=&auth_mode=
+###< symfony/swiftmailer-bundle ###
